force-app/main/default/objects/User/fields/Allow_to_Log_Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Allow_to_Log_Backlogs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow to Log Backlogs</label>
    <type>Checkbox</type>
</CustomField>