force-app/main/default/objects/User/fields/Allowed_to_Process_Financials__c.field-meta.xml
<CustomField>
    <fullName>Allowed_to_Process_Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please tick this only if the user should be allowed to process financials/medicare claims</description>
    <label>Allowed to Process Financials?</label>
    <type>Checkbox</type>
</CustomField>