force-app/main/default/objects/User/fields/Allowed_to_Undertake_Administrative__c.field-meta.xml
<CustomField>
    <fullName>Allowed_to_Undertake_Administrative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allowed to Undertake Administrative</label>
    <type>Checkbox</type>
</CustomField>