force-app/main/default/objects/User/fields/Allowed_to_Undertake_Scientific_Duties__c.field-meta.xml
<CustomField>
    <fullName>Allowed_to_Undertake_Scientific_Duties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allowed to Undertake Scientific Duties</label>
    <type>Checkbox</type>
</CustomField>