force-app/main/default/objects/User/fields/Donor_Co_ordinator__c.field-meta.xml
<CustomField>
    <fullName>Donor_Co_ordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine permission to view donor fields</description>
    <label>Donor Co-ordinator</label>
    <type>Checkbox</type>
</CustomField>