force-app/main/default/objects/User/fields/filesconnect__GEmail__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__GEmail__c</fullName>
    <label>GEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>