force-app/main/default/objects/User/fields/filesconnect__GRefresh_Token__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__GRefresh_Token__c</fullName>
    <label>GRefresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>