force-app/main/default/objects/User/fields/filesconnect__GToken__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__GToken__c</fullName>
    <label>GToken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>