force-app/main/default/objects/User/fields/Is_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Is_Nurse__c</fullName>
    <formula>CONTAINS( Profile.Name,&apos;System Administrator&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Nurse</label>
    <type>Checkbox</type>
</CustomField>