force-app/main/default/objects/User/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>For Title e.g. OAM, AM etc for use in email signatures etc.</description>
    <label>Order</label>
    <length>3</length>
    <type>Text</type>
</CustomField>