force-app/main/default/objects/User/fields/PIN_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>PIN_Encrypted__c</fullName>
    <label>PIN Encrypted</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>