force-app/main/default/objects/User/fields/PIN_Unencrypted__c.field-meta.xml
<CustomField>
    <fullName>PIN_Unencrypted__c</fullName>
    <label>PIN Unencrypted</label>
    <length>20</length>
    <type>Text</type>
</CustomField>