force-app/main/default/objects/User/fields/Post_Nominals__c.field-meta.xml
<CustomField>
    <fullName>Post_Nominals__c</fullName>
    <label>Post-Nominals</label>
    <length>50</length>
    <type>Text</type>
</CustomField>