force-app/main/default/objects/User/fields/Show_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Show_Timeline__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Timeline</label>
    <type>Checkbox</type>
</CustomField>