force-app/main/default/objects/User/fields/Tracking_Page_View_Preference__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Page_View_Preference__c</fullName>
    <label>Tracking Page View Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compact</fullName>
            </value>
            <value>
                <fullName>Results View</fullName>
            </value>
            <value>
                <fullName>Expanded View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>